--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
         "2amigos/yii2-file-upload-widget": "~1.0",
         "dmstr/yii2-adminlte-asset": "^2.1",
         "2amigos/yii2-date-time-picker-widget": "~1.0",
-        "2amigos/yii2-date-picker-widget": "~1.0"
+        "2amigos/yii2-date-picker-widget": "~1.0",
+        "mdmsoft/yii2-admin": "2.x-dev"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.0.0",
